# ypcli

./: .codecov.yml  .commitlintrc.yaml  .cspell.json  .gitignore  .golangci.yml  .goreleaser.yaml  .markdownlint-cli2.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG.ru.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  SUPPORT.md  Taskfile.yml  go.mod  go.sum  sonar-project.properties
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  commitlint.yml  dependency-review.yml  e2e.yml  release.yml  scorecard.yml  security.yml
cmd/ypcli/: main.go
deploy/: README.md
deploy/systemd/: ypcli-mcp.service
docs/: README.md  cli.md
docs/en/: 01-architecture.md  02-installation.md  03-usage.md  04-cli.md  05-configuration.md  06-automation.md  07-security.md  08-development.md  09-mcp.md  README.md
docs/ru/: 01-architecture.md  02-installation.md  03-usage.md  04-cli.md  05-configuration.md  06-automation.md  07-security.md  08-development.md  09-mcp.md  README.md
integrations/: README.md
integrations/claude/: .mcp.json
integrations/codex/: config.toml
integrations/gemini/: GEMINI.md  gemini-extension.json  settings.json
internal/api/: client.go  errors.go  (+4 more)
tests/e2e/: README.md  _harness.py  conftest.py  pyproject.toml  test_auth.py  test_completion.py  test_config.py  test_exit_codes.py  test_receive.py  test_roundtrip.py  test_send.py  test_version.py
(+34 files in other folders)
